[gd_scene load_steps=9 format=3 uid="uid://cxe4s4l0kq8fd"]

[ext_resource type="Texture2D" uid="uid://c3wj485j1t6mx" path="res://Assets/Image/Items/Chest/Chest closed.png" id="1_kpbhs"]
[ext_resource type="Script" path="res://Assets/Scripts/Item/Chest/chest.gd" id="1_pwxhk"]
[ext_resource type="Texture2D" uid="uid://cyhomj7owqv7f" path="res://Assets/Image/Items/Chest/Chest Open.png" id="2_qtaq6"]
[ext_resource type="AudioStream" uid="uid://cqbl7m0eodgnm" path="res://Assets/Music/SFX/Chest/Chest.wav" id="4_1tl8u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_virvc"]
radius = 61.0082

[sub_resource type="Animation" id="Animation_nbej2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChestClosed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x5wvy"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChestClosed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("chest_open_sfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_1tl8u")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7h5h"]
_data = {
"RESET": SubResource("Animation_nbej2"),
"open": SubResource("Animation_x5wvy")
}

[node name="Chest" type="Area2D" groups=["chest"]]
collision_layer = 32768
collision_mask = 3
script = ExtResource("1_pwxhk")

[node name="ChestClosed" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_kpbhs")

[node name="ChestOpen" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_qtaq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_virvc")
debug_color = Color(0.90001, 0.241658, 0.506019, 0.42)

[node name="chest_open_sfx" type="AudioStreamPlayer2D" parent="."]
bus = &"Sound Effects"
area_mask = 8192

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o7h5h")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
